fixed header issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ body {
   /* color: #203E5F; */
   line-height: 20px;
   background: url("../images/honey_comb.png"), linear-gradient(to left, #000000, #203E5F);
+  display: flex;
+  flex-direction: column;
 }
 
 menu,
@@ -120,10 +122,16 @@ figcaption {
   text-align: center;
 }
 
+.topmost-logo {
+  display: none;
+  margin: 10px auto 0;
+}
+
 #sidebar {
   font-family: 'rubikMedium';
   margin-left: 20px;
-  width: 25%;
+  /* width: 25%; */
+  flex: 25%;
   /* float: left; */
   /* transform: translateY(32.5%); */
   /* box-sizing: border-box; */
@@ -133,7 +141,7 @@ figcaption {
   /* flex-basis: 500px; */
   padding: 20px 25px;
   z-index: 1;
-  --offset: 9.6rem;
+  --offset: 10.4rem;
   align-self: start;
   position: sticky;
   top: var(--offset);
@@ -164,12 +172,12 @@ figcaption {
   display: flex;
   margin: 0 auto;
   max-width: 1400px;
+  width: 92%;
 }
 
 .section-container .header {
   padding-top: 55px;
   overflow:hidden;
-
 }
 
 .team-container {
@@ -690,6 +698,26 @@ label {
   .w-nav[data-collapse="tiny"] .w-nav-button {
     display: block;
   }
+
+  .link-block.w-inline-block {
+    font-size: 16px;
+  }
+
+  .topmost-logo {
+    display: block;
+  }
+
+  .botmost-logo {
+    display: none;
+  }
+
+  .home-container, .team-container {
+    margin-top: 0px;
+  }
+
+  .section-container .header {
+    padding-top: 0px;
+  }
 }
 
 .w-tabs {
@@ -748,6 +776,7 @@ label {
 .w--tab-active {
   display: block;
 }
+
 
 @media screen and (max-width: 479px) {
   .w-tab-link {
@@ -1514,6 +1543,7 @@ a:hover {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  flex-grow: 2;
 }
 
 .link-block {
@@ -1548,6 +1578,7 @@ a:hover {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-top: 10px;
 }
 
 .brand {
@@ -1571,6 +1602,8 @@ a:hover {
   -ms-flex-align: center;
   align-items: center;
   font-size: 24px;
+  flex: 0;
+  padding-right: 20px;
 }
 
 .login-buttons {
